fix horizontal scroll

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -81,6 +81,7 @@
 .generatedImage {
   position: relative; /* Add this to position the subtitle */
   overflow-y: hidden; /* Allows vertical scrolling */
+  overflow-x: hidden; /* Allows horizontal scrolling */
   width: auto;
   height: 100%;
   min-height: 100%;
@@ -156,6 +157,7 @@
 
 .fullScreenTerminal {
   overflow-y: scroll; /* Allows vertical scrolling */
+  overflow-x: hidden; /* Allows horizontal scrolling */
   line-height: 1.2;
   white-space: pre-wrap !important;
   color: #e5f810;
@@ -172,7 +174,6 @@
   padding-top: 30px;
   max-height: 100%;
   max-width: 100%;
-  overflow: auto;
   text-shadow: -2px -2px 2px #006a0e, /* top left */ 2px -2px 2px #006a0e,
     /* top right */ -2px 2px 2px #006a0e, /* bottom left */ 3px 3px 3px #006a0e; /* bottom right */
 }
@@ -327,6 +328,7 @@
 
 .markdownanswer {
   overflow-y: scroll; /* Allows vertical scrolling */
+  overflow-x: hidden; /* Allows horizontal scrolling */
   line-height: 1.2;
   white-space: pre-wrap !important;
   color: #e5f810;
@@ -343,7 +345,6 @@
   padding: 10px; /* Adjust the padding to reduce the black area around the image */
   padding-top: 30px;
   max-height: 100%;
-  overflow: auto;
 }
 
 .markdownanswer a:hover {
@@ -663,6 +664,7 @@
   width: 100%;
   height: 100%;
   overflow-y: scroll;
+  overflow-x: hidden; /* Allows horizontal scrolling */
   border-radius: 0.5rem;
 }
 
